--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,5 +23,5 @@ form h3 {
 }
 
 .btn {
-  @apply bg-indigo-700 text-white px-4 py-2 rounded-md mt-5;
+  @apply bg-indigo-700 text-white px-4 py-2 rounded-md hover:scale-105 transition-transform;
 }
