--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-form input {
+form input,
+form select {
   @apply bg-slate-200 px-4 py-3 rounded-md focus:outline-4 outline-indigo-600 text-slate-700 mb-5 shadow-inner;
 }
 
